--- a/topstyles.css
+++ b/topstyles.css
@@ -1,6 +1,6 @@
 html{width: 100%;
 	height: 100%;
-	background-color: white;
+	background-color: #efac7c;
 	background-image: url(https://images3.alphacoders.com/853/85305.jpg);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
