--- a/topstyles.css
+++ b/topstyles.css
@@ -45,9 +45,6 @@ body{width: 1080px;
 	overflow: hidden;
 	display: inline-block;
 }
-/*.myHeaderPhoto img{
-	width: 100%;
-}*/
 .myHeaderText{
 	position: relative;
 	top: -20px;
@@ -55,7 +52,7 @@ body{width: 1080px;
 	margin: 0px;
 	font-size: 50px;
 	line-height: 120px;
-	color: #9e0500;
+	font-color: #9e0500;
 	font-weight: bold;
 	text-shadow: 0px 2px 4px #ffc107;
 	display: inline-block;
