--- a/topstyles.css
+++ b/topstyles.css
@@ -52,8 +52,7 @@ body{width: 1080px;
 	margin: 0px;
 	font-size: 50px;
 	line-height: 120px;
-	color: #9e0500;
-	font-color: #9e0500;
+	color: rgb(197,82,27);
 	font-weight: bold;
 	text-shadow: 0px 2px 4px #ffc107;
 	display: inline-block;
