--- a/minesweeper-vue.css
+++ b/minesweeper-vue.css
@@ -93,6 +93,35 @@ input[type="button"] {
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
+.glass_outer {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 28px;
+	height: 28px;
+}
+.glass_left, .glass_right {
+	position: absolute;
+	top: 8px;
+	width: 8px;
+	height: 5px;
+	border-radius: 5px;
+	background: black;
+}
+.glass_left {
+	left: 4px;
+}
+.glass_middle {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	width: 10px;
+	height: 2px;
+	background: black;
+}
+.glass_right {
+	right: 4px;
+}
 .block-line {
 	display: flex;
 	justify-content: center;
