--- a/carousel-vue.css
+++ b/carousel-vue.css
@@ -11,14 +11,6 @@ body {
 [v-cloak] {
 	display: none;
 }
-.mask-layer {
-	position: fixed;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	background: black;
-	opacity: 0.5;
-}
 .slide-container {
 	position: absolute;
 	top: 0px;
@@ -26,12 +18,9 @@ body {
 	right: 0px;
 	bottom: 0px;
 	margin: auto;
-	width: 600px;
-	height: 400px;
+	width: 660px;
+	height: 500px;
 	background: white;
-}
-.hidden {
-	display: none;
 }
 .slides {
 	position: absolute;
@@ -39,7 +28,7 @@ body {
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
-	margin: 20px;
+	margin: 10px;
 }
 .slide-general {
 	position: absolute;
@@ -47,6 +36,7 @@ body {
 	width: 100%;
 	height: 100%;
 	text-align: center;
+	vertical-align: middle;
 }
 .slide-general img {
 	max-width: 100%;
@@ -70,19 +60,18 @@ body {
 	margin: auto 0px;
 	width: 40px;
 	height: 40px;
-	color: gray;
+	color: black;
 	font-size: 40px;
 	font-weight: bold;
 	line-height: 30px;
+	text-align: center;
+	background: rgba(255, 255, 255, 0.3);
 	cursor: pointer;
+	z-index: 1;
 }
 .slide-to-left {
-	left: -20px;
-	text-shadow: 2px 2px 2px silver;
-	text-align: right;
+	left: 0px;	
 }
 .slide-to-right {
-	right: -20px;
-	text-shadow: -2px 2px 2px silver;
-	text-align: left;
+	right: 0px;
 }
