--- a/minesweeper-vue.css
+++ b/minesweeper-vue.css
@@ -143,7 +143,7 @@ input[type="button"] {
 	border-right-color: rgb(100, 100, 100);
 	border-bottom-color: rgb(100, 100, 100);
 }
-.cleared {
+.cleared, .tempCleared {
 	border: 2px solid;
 	border-left-color: rgb(119, 119, 119);
 	border-top-color: rgb(119, 119, 119);
