--- a/minesweeper-vue.css
+++ b/minesweeper-vue.css
@@ -167,6 +167,9 @@ input[type="button"] {
 .cross {
 	font-size: 24px;
 }
+.flag-pressed {
+	transform: translate(1px, 1px);
+}
 .flag{
 	position: absolute;
 	top: 5px;
